plots after traninig

--- a/docs/sprawozdanie.tex
+++ b/docs/sprawozdanie.tex
@@ -45,17 +45,60 @@
 
 \section{Wstęp}
 
+\subsection{Cel projektu}
+
+Celem projektu było zbadanie skuteczności radialnych sieci neuronowych do predykcji przebiegu choroby Parkinsona.
+
+\subsection{Wykorzystane narzędzia}
+
+Do realizacji projektu wykorzystano środowisko Matlab, oraz dane z zbioru uczącego UCI Oxford Parkinson's Disease Telemonitoring Dataset, udostępnione przez autorów \cite{zbior_uczacy}.
+
+\subsection{Aspekt medyczny}
+
+Coś o Parkinsonie i danych.
+
+\section{Zarys podstaw teoretycznych}
+
+\section{Osiągnięte rezultaty}
+
+\section{Wnioski}
 
 \newpage
 \begin{thebibliography}{9}
 
+\bibitem{zbior_uczacy}
+A Tsanas, MA Little, PE McSharry, LO Ramig (2009) 
+'Accurate telemonitoring of Parkinson’s disease progression by non-invasive speech tests', 
+IEEE Transactions on Biomedical Engineering (to appear). 
+\\\texttt{https://archive.ics.uci.edu/ml/datasets/Parkinsons+Telemonitoring}
+
+\bibitem{zbior_uczacy_1}
+Little MA, McSharry PE, Hunter EJ, Ramig LO (2009), 
+'Suitability of dysphonia measurements for telemonitoring of Parkinson's disease', 
+IEEE Transactions on Biomedical Engineering, 56(4):1015-1022 
+
+\bibitem{zbior_uczacy_2}
+Little MA, McSharry PE, Roberts SJ, Costello DAE, Moroz IM. 
+'Exploiting Nonlinear Recurrence and Fractal Scaling Properties for Voice Disorder Detection', 
+BioMedical Engineering OnLine 2007, 6:23 (26 June 2007) 
+
+\bibitem{Osowski}
+Stanisław Osowski.
+\textit{Sieci Neuronowe w ujęciu algorytmicznym}
+Wydawnictwo Naukowo-Techniczne, Warszawa 1996
+
+\bibitem{Osowski}
+Stanisław Osowski.
+\textit{Sieci Neuronowe do przetwarzania informacji}
+Oficyna Wydawnicza Politechniki Warszawskiej, Warszawa 2006
+
 \bibitem{matlab}
 Oficjalna dokumentacja Mathworks Deep Learning Toolbox. 
-\\\texttt{https://www.mathworks.com/help/deeplearning/examples/radial-basis-approximation.html}
+\\\texttt{https://www.mathworks.com/help/deeplearning/examples/radial-basis\\-approximation.html}
 
 \bibitem{owards Data Sience}
 Towards Data Science blog
-\\\texttt{https://towardsdatascience.com/radial-basis-functions-neural-networks-all-we-need-to-know-9a88cc053448}
+\\\texttt{https://towardsdatascience.com/radial-basis-functions-neural-\\networks-all-we-need-to-know-9a88cc053448}
 
 
 \end{thebibliography}
