--- a/docs/sprawozdanie.tex
+++ b/docs/sprawozdanie.tex
@@ -92,6 +92,14 @@ Stanisław Osowski.
 \textit{Sieci Neuronowe do przetwarzania informacji}
 Oficyna Wydawnicza Politechniki Warszawskiej, Warszawa 2006
 
+\bibitem{
+Hongfa Wang, Xinai Xu, Zhejiang
+Water Conservancy and Hydropower College
+Determination of Spread Constant in RBF Neural Network by Genetic
+Algorithm 
+\textit{http://www.globalcis.org/ijact/ppl/IJACT3017PPL.pdf}
+
+
 \bibitem{matlab}
 Oficjalna dokumentacja Mathworks Deep Learning Toolbox. 
 \\\texttt{https://www.mathworks.com/help/deeplearning/examples/radial-basis\\-approximation.html}
