--- a/docs/sprawozdanie.tex
+++ b/docs/sprawozdanie.tex
@@ -220,22 +220,65 @@ Celem projektu było określenie UPDRS motorycznego i całkowitego na podstawie 
 \section{Założenia eksperymentu}
 Opis podziału na zbiory uczące i testowe.
 
+\subsection{Usunięcie duplikatów próbek}
+Po przeanalizowaniu zawartości zbioru uczącego zauważono wiele powtarzających się próbek o bardzo zbliżonych wartościach czasu i sygnałów. 
+
+Przykładowo, dla pierwszego pacjenta w czasach: 5.6431, 5.6438, 5.6451, 5.6458, 5.6458 występujące wartości parametru jitter(\%) to 0.00348, 0.00413, 0.00217, 0.00294, 0.00250. Bardzo zbliżone wartości próbek mogą powodować nadmierne dopasowanie sieci do danych uczących.. Przygotowano dwa zestawy danych: z duplikatami i bez duplikatów próbek oraz zbadano zachowanie sieci dla obu zbiorów przy zmiennej ilości pacjentów.
 
 \newpage
 
 \section{Osiągnięte wyniki}
-Wyniki eksperymentów bez zmniejszenia pacjentów i bez usunięcia duplikatów.
+W trakcie przeprowadzania eksperymentu przetestowano sieć neuronową dla czterech konfiguracji:
 
-\subsection{Zmniejszenie liczby pacjentów}
-Zaobserowano znaczącą poprawę osiąganych wyników przy zredukowanej liczbie pacjentów w zbiorach uczących i treningowych.
+\begin{enumerate}
+\item Dane z duplikatami próbek czasowych z małą ilością pacjentów
+\item Dane z duplikatami próbek czasowych z dużą ilością pacjentów
+\item Dane bez duplikatów próbek czasowych z małą ilością pacjentów
+\item Dane bez duplikatów próbek czasowych z dużą ilością pacjentów
+\end{enumerate}
 
-\subsection{Usunięcie duplikatów próbek}
-Po przeanalizowaniu zawartości zbioru uczącego zauważono wiele powtarzających się próbek o bardzo zbliżonych wartościach czasu i sygnałów. 
+Poniżej omówiono zachowania sieci dla poszczególnych przypadków.
 
-Przykładowo dla pierwszego pacjenta w czasie: 5.6431, 5.6438, 5.6451, 5.6458, 5.6458 wartości jitter(\%) to 0.00348, 0.00413, 0.00217, 0.00294, 0.00250. Bardzo zbliżone wartości próbek mogą powodwać overfitting. Zbadano zachowanie i osiągane wyniki sieci dla co piątej próbki z dostępnego zbioru w zbiorze uczącym.
+\subsection{Dane z duplikatami próbek czasowych z małą ilością pacjentów}
 
-\subsection{Zmniejszenie liczby pacjentów i usunięcie duplikatów}
-Połączenie poprzednich przypadków.
+Parametry uczenia:
+\begin{itemize}
+\item Mean squared error: $10^{-9}$
+\item Spread constant: $10$
+\end{itemize}
+
+Na powyższych wykresach można zaobserwować, że dla małej ilości pacjentów i dużej ilości danych uczących sieć nie wykazuje problemów z uczeniem. Skuteczność predykcji w przypadku danych testowych jest na wysokim poziomie.
+
+\subsection{Dane z duplikatami próbek czasowych z dużą ilością pacjentów}
+
+Parametry uczenia:
+\begin{itemize}
+\item Mean squared error: $10^{-9}$
+\item Spread constant: $10$
+\end{itemize}
+
+Przy zwiększonej ilości pacjentów oraz dużej ilości danych uczących sieć wykazuje pewne problemy z nauką. Znacząco wydłuża się czas uczenia, można także zaobserwować pogorszenie jakości wykonywanej predykcji. Testy dla maksymalnej liczby pacjentów nie zostały wykonane ze względu na czas uczenia przekraczający kilka godzin.
+
+\subsection{Dane bez duplikatów próbek czasowych z małą ilością pacjentów}
+
+Parametry uczenia:
+\begin{itemize}
+\item Mean squared error: $10^{-9}$
+\item Spread constant: $1$
+\end{itemize}
+
+Dla małej ilości pacjentów oraz zbioru uczącego nie zawierającego duplikatów sieć wykazuje niedopasowanie. Mała ilość danych uczących znacząco utrudnia naukę, co uniemożliwia wykonanie jakiejkolwiek predykcji.
+
+\subsection{Dane bez duplikatów próbek czasowych z dużą ilością pacjentów}
+
+Parametry uczenia:
+\begin{itemize}
+\item Mean squared error: $10^{-9}$
+\item Spread constant: $1$
+\end{itemize}
+
+Przy zwiększeniu liczby pacjentów dla danych nie zawierających duplikatów widać znaczne poprawienie szybkości nauki oraz dopasowania sieci. Nie wszystkie predykcje wykonywane są w pełni poprawnie, ale jest to rekompensowane szybkim czasem uczenia.
+
 
 \newpage
 \section{Wnioski}
