--- a/docs/sprawozdanie.tex
+++ b/docs/sprawozdanie.tex
@@ -10,7 +10,7 @@
 \usepackage{pbox}
 \usepackage{amsmath}
 
-\newcommand\tab[1][1cm]{\hspace*{#1}}
+%\newcommand\tableofcontents1][1cm]{\hspace*{#1}}
 
 \title{Dokumentacja projektowa}
 \date{2018-03-18}
@@ -218,67 +218,44 @@ Celem projektu było określenie UPDRS motorycznego i całkowitego na podstawie 
 
 \newpage
 \section{Założenia eksperymentu}
-Opis podziału na zbiory uczące i testowe.
 
-\subsection{Usunięcie duplikatów próbek}
-Po przeanalizowaniu zawartości zbioru uczącego zauważono wiele powtarzających się próbek o bardzo zbliżonych wartościach czasu i sygnałów. 
+\subsection{Podział na zbiór uczący i testowy}
+Przyjęto zbiór testowy jako pierwsze 24 próbki dostępne dla każdego pacjenta. Wszystkie próbki nienależące do zbioru testowego wykorzystano jako zbiór uczący. Liczba wszystkich próbek dostępnych dla i-tego pacjenta nie jest stała, przez co zbiory uczące dla różnych pacjentów zawierały różną liczbę elementów. Minimalna liczba próbek w zbiorze uczącym to 100 próbek dla pojedynczego pacjenta.
 
-Przykładowo, dla pierwszego pacjenta w czasach: 5.6431, 5.6438, 5.6451, 5.6458, 5.6458 występujące wartości parametru jitter(\%) to 0.00348, 0.00413, 0.00217, 0.00294, 0.00250. Bardzo zbliżone wartości próbek mogą powodować nadmierne dopasowanie sieci do danych uczących.. Przygotowano dwa zestawy danych: z duplikatami i bez duplikatów próbek oraz zbadano zachowanie sieci dla obu zbiorów przy zmiennej ilości pacjentów.
+Przyjęcie takiej metodyki, było podyktowane przez niską liczbę pacjentów w wykorzystanym zbiorze. Przy 42 pacjentach wydzielanie całych serii pomiarowych wybranych pacjentów poważnie ograniczyłoby zbiór uczący i mogłoby spowodować kłopoty z uogólnieniem wyników przez sieć. 
+
+Wszystkie próbki w zbiorze uczącym i testowym zostały posortowane względem czasu w celu ułatwienia analizy uzyskanych wyników.
+
+\subsection{Opis przyjętych metryk}
+
+Do opisu wyników osiąganych dla zbioru uczącego i testowego wykorzystano MSE. W sprawozdaniu wszystkie wartości MSE dla zbioru uczącego zostały obliczone automatycznie przez toolbox matlaba. W analizowanym zbiorze MSE można je zdefniować jako:
+
+\begin{equation}
+	MSE = \frac{1}{n-1} \sum_{i=1}^{n} \sum_{j=1}^{m_i} (y_{i_j} - F(u_{i_j}))^2
+\end{equation}
+
+gdzie:\\
+$n$ - liczba pacjentów \\
+$m_i$ - liczba próbek dla i-tego pacjenta \\
+$y_{i_j}$ - oczekiwane wyjście dla i-tego pacjenta i j-tej próbki \\
+$F(u_{i_j})$ - wyjście sieci neuronowej dla i-tego pacjenta i j-tej próbki
+
 
 \newpage
 
 \section{Osiągnięte wyniki}
-W trakcie przeprowadzania eksperymentu przetestowano sieć neuronową dla czterech konfiguracji:
+Wyniki eksperymentów bez zmniejszenia pacjentów i bez usunięcia duplikatów.
 
-\begin{enumerate}
-\item Dane z duplikatami próbek czasowych z małą ilością pacjentów
-\item Dane z duplikatami próbek czasowych z dużą ilością pacjentów
-\item Dane bez duplikatów próbek czasowych z małą ilością pacjentów
-\item Dane bez duplikatów próbek czasowych z dużą ilością pacjentów
-\end{enumerate}
+\subsection{Zmniejszenie liczby pacjentów}
+Zaobserowano znaczącą poprawę osiąganych wyników przy zredukowanej liczbie pacjentów w zbiorach uczących i treningowych.
 
-Poniżej omówiono zachowania sieci dla poszczególnych przypadków.
+\subsection{Usunięcie duplikatów próbek}
+Po przeanalizowaniu zawartości zbioru uczącego zauważono wiele powtarzających się próbek o bardzo zbliżonych wartościach czasu i sygnałów. 
 
-\subsection{Dane z duplikatami próbek czasowych z małą ilością pacjentów}
+Przykładowo dla pierwszego pacjenta w czasie: 5.6431, 5.6438, 5.6451, 5.6458, 5.6458 wartości jitter(\%) to 0.00348, 0.00413, 0.00217, 0.00294, 0.00250. Bardzo zbliżone wartości próbek mogą powodwać overfitting. Zbadano zachowanie i osiągane wyniki sieci dla co piątej próbki z dostępnego zbioru w zbiorze uczącym.
 
-Parametry uczenia:
-\begin{itemize}
-\item Mean squared error: $10^{-9}$
-\item Spread constant: $10$
-\end{itemize}
-
-Na powyższych wykresach można zaobserwować, że dla małej ilości pacjentów i dużej ilości danych uczących sieć nie wykazuje problemów z uczeniem. Skuteczność predykcji w przypadku danych testowych jest na wysokim poziomie.
-
-\subsection{Dane z duplikatami próbek czasowych z dużą ilością pacjentów}
-
-Parametry uczenia:
-\begin{itemize}
-\item Mean squared error: $10^{-9}$
-\item Spread constant: $10$
-\end{itemize}
-
-Przy zwiększonej ilości pacjentów oraz dużej ilości danych uczących sieć wykazuje pewne problemy z nauką. Znacząco wydłuża się czas uczenia, można także zaobserwować pogorszenie jakości wykonywanej predykcji. Testy dla maksymalnej liczby pacjentów nie zostały wykonane ze względu na czas uczenia przekraczający kilka godzin.
-
-\subsection{Dane bez duplikatów próbek czasowych z małą ilością pacjentów}
-
-Parametry uczenia:
-\begin{itemize}
-\item Mean squared error: $10^{-9}$
-\item Spread constant: $1$
-\end{itemize}
-
-Dla małej ilości pacjentów oraz zbioru uczącego nie zawierającego duplikatów sieć wykazuje niedopasowanie. Mała ilość danych uczących znacząco utrudnia naukę, co uniemożliwia wykonanie jakiejkolwiek predykcji.
-
-\subsection{Dane bez duplikatów próbek czasowych z dużą ilością pacjentów}
-
-Parametry uczenia:
-\begin{itemize}
-\item Mean squared error: $10^{-9}$
-\item Spread constant: $1$
-\end{itemize}
-
-Przy zwiększeniu liczby pacjentów dla danych nie zawierających duplikatów widać znaczne poprawienie szybkości nauki oraz dopasowania sieci. Nie wszystkie predykcje wykonywane są w pełni poprawnie, ale jest to rekompensowane szybkim czasem uczenia.
-
+\subsection{Zmniejszenie liczby pacjentów i usunięcie duplikatów}
+Połączenie poprzednich przypadków.
 
 \newpage
 \section{Wnioski}
