--- a/docs/sprawozdanie.tex
+++ b/docs/sprawozdanie.tex
@@ -48,7 +48,7 @@
 
 \subsection{Cel projektu}
 
-Celem projektu było zbadanie skuteczności radialnych sieci neuronowych w predykcji przebiegu choroby Parkinsona.
+Celem projektu było zbadanie skuteczności radialnych sieci neuronowych w~predykcji przebiegu choroby Parkinsona.
 
 \subsection{Wykorzystane narzędzia}
 
@@ -56,13 +56,13 @@ Do realizacji projektu wykorzystano środowisko Matlab, w tym Deep Learning Tool
 
 \subsection{Aspekt medyczny}
 
-Parkinson jest zwyrodnieniową chorobą ośrodkowego układu nerwowego. Występuje ona najczęściej u osób starszych, głównie mężczyzn i rozwija się przez kilkanaście lat. Jej objawami są między innymi: osłabienie, zmęczenie, spowolnienie ruchowe, drżenie mięśni czy też kłopoty z wykonywaniem codziennych czynności, takich jak wstawanie, mycie, jedzenie, ubieranie się.  Objawy te oraz sposób rozwoju choroby pozwalają na stworzenie systemów predykcyjnych umożliwiających ciągłe monitorowanie stanu zdrowia pacjentów. Zbiór uczący użyty w projekcie wykorzystuje pomiary głosu pacjentów wykonane przez urządzenie telemedyczne służące do śledzenia przebiegu choroby w sześciomiesięcznym przedziale czasu. Dla pojedynczego pacjenta zawiera on parametry takie jak: identyfikator, wiek oraz płeć, interwały czasowe wykonanych pomiarów, szesnaście parametrów opisujących nagrany dźwięk, a także parametry wynikowe UPDRS (Unified Parkinson's Disease Rating Scale) opisujące postęp choroby. W zbiorze znajdują się dane zawierające informację o 42 różnych pacjentach, po około 140 pomiarów dla pojedynczej osoby, co łącznie daje około 5000 rekordów.
+Parkinson jest zwyrodnieniową chorobą ośrodkowego układu nerwowego. Występuje ona najczęściej u osób starszych, głównie mężczyzn i rozwija się przez kilkanaście lat. Jej objawami są między innymi: osłabienie, zmęczenie, spowolnienie ruchowe, drżenie mięśni czy też kłopoty z wykonywaniem codziennych czynności, takich jak wstawanie, mycie, jedzenie, ubieranie się.  Objawy te oraz sposób rozwoju choroby pozwalają na stworzenie systemów predykcyjnych umożliwiających ciągłe monitorowanie stanu zdrowia pacjentów. Zbiór uczący użyty w projekcie wykorzystuje pomiary głosu pacjentów wykonane przez urządzenie telemedyczne służące do śledzenia przebiegu choroby w~sześciomiesięcznym przedziale czasu. Dla pojedynczego pacjenta zawiera on parametry takie jak: identyfikator, wiek oraz płeć, interwały czasowe wykonanych pomiarów, szesnaście parametrów opisujących nagrany dźwięk, a także parametry wynikowe UPDRS (Unified Parkinson's Disease Rating Scale) opisujące postęp choroby. W zbiorze znajdują się dane zawierające informację o 42 różnych pacjentach, po około 140 pomiarów dla pojedynczej osoby, co łącznie daje około 5000 rekordów.
 
 \section{Zarys podstaw teoretycznych}
 
 \subsection{Topologia radialnych sieci neuronowych}
 
-Radialne sieci neuronowe są specjalną odmianą perceptronów wielowarstwowych. Tak jak one realizują bowiem odwzorowanie zbioru wejściowego w wyjściowy, robią to jednak poprzez dopasowanie wielu pojedynczych funkcji aproksymujących do wartości zadanych. Odwzorowania takie ważne są tylko w wąskim obszarze przestrzeni wielowymiarowej, zatem ich suma jest odwzorowaniem pełnego zbioru danych. Neurony warstwy ukrytej w sieciach radialnych realizują funkcję zmieniającą się radialnie wokół wybranego centrum \textsl{c} i przyjmującą wartości niezerowe jedynie w otoczeniu tego punktu. Realizację taką przedstawia poniższy rysunek:
+Radialne sieci neuronowe są specjalną odmianą perceptronów wielowarstwowych. Tak jak one realizują bowiem odwzorowanie zbioru wejściowego w~wyjściowy, robią to jednak poprzez dopasowanie wielu pojedynczych funkcji aproksymujących do wartości zadanych. Odwzorowania takie ważne są tylko w wąskim obszarze przestrzeni wielowymiarowej, zatem ich suma jest odwzorowaniem pełnego zbioru danych. Neurony warstwy ukrytej w sieciach radialnych realizują funkcję zmieniającą się radialnie wokół wybranego centrum \textsl{c} i przyjmującą wartości niezerowe jedynie w otoczeniu tego punktu. Realizację taką przedstawia poniższy rysunek:
 
 \begin{figure}[h!]
 \centering
@@ -75,7 +75,7 @@ Funkcje takie, nazywane radialnymi funkcjami bazowymi, przyjmują postać:
 
 \[ \varphi(x) = \varphi(||x-c||) \]
 
-Rolę neuronu ukrytego można zatem sprowadzić do odwzorowania radialnego przestrzeni wokół jednego zadanego punktu lub grupy takich punktów stanowiących klaster. Odwzorowanie całej przestrzeni wielowymiarowej przez neurony warstwy wyjściowej jest więc możliwe dzięki superpozycji sygnałów pochodzących od wszystkich neuronów ukrytych. Dobór liczby neuronów warstwy zależy ściśle od przyjętego błędu, przy czym poszczególne neurony dodawane są iteracyjnie, po jednym neuronie w każdej iteracji, aż do osiągnięcia pożądanego błędu średniokwadratowego. Maksymalna liczba neuronów w warstwie ukrytej nie może przekroczyć  liczby wektorów podanych na wejście sieci. Typowa sieć radialna jest modelem zawierającym warstwę wejściową przyjmującą sygnały opisywane wektorem wejściowym \textbf{x}, warstwę ukrytą neuronów radialnych oraz warstwę wyjściową złożoną z neuronów liniowych. Przykład takiej topologii przestawiono na poniższym rysunku:
+Rolę neuronu ukrytego można zatem sprowadzić do odwzorowania radialnego przestrzeni wokół jednego zadanego punktu lub grupy takich punktów stanowiących klaster. Odwzorowanie całej przestrzeni wielowymiarowej przez neurony warstwy wyjściowej jest więc możliwe dzięki superpozycji sygnałów pochodzących od wszystkich neuronów ukrytych. Dobór liczby neuronów warstwy zależy ściśle od przyjętego błędu, przy czym poszczególne neurony dodawane są iteracyjnie, po jednym neuronie w każdej iteracji, aż do osiągnięcia pożądanego błędu średniokwadratowego. Maksymalna liczba neuronów w~warstwie ukrytej nie może przekroczyć  liczby wektorów podanych na wejście sieci. Typowa sieć radialna jest modelem zawierającym warstwę wejściową przyjmującą sygnały opisywane wektorem wejściowym \textbf{x}, warstwę ukrytą neuronów radialnych oraz warstwę wyjściową złożoną z neuronów liniowych. Przykład takiej topologii przestawiono na poniższym rysunku:
 
 \begin{figure}[h!]
 \centering
@@ -209,36 +209,40 @@ Kolumny z danymi pacjentów zawierają kolejno:
 \end{itemize}
 
 \begin{figure}
+\centering
 	\includegraphics[width=0.90\textwidth]{data.jpg}\par\vspace{1cm}
 \caption{Wizualizacja zbioru uczącego}
 \label{data visualisation}
 \end{figure}
 
-Celem projektu było określenie UPDRS motorycznego i całkowitego na podstawie dostępnych pomiarów parametru głosu pacjentów. Na rys \ref{data visualisation} przedstawiono zależność wszystkich parametrów od czasu dla pacjentów 1, 11, 21, 31 i 41. Na wykresach 1 i 2 przedstawiono motoryczny i całkowity UPDRS. Na wykresie 3 przedstawiono czas, stąd zaobserwowana zależność liniowa dla wszystkich pacjentów. Na wykresach 4 i 5 przedstawiono wiek i płeć pacjentów - stałe wartości w czasie pomiaru. Na pozostałych wykresach przedstawiono kolejne parametry związane z dźwiękiem wymienione powyżej.
+Celem projektu było określenie UPDRS motorycznego na podstawie dostępnych pomiarów  głosów pacjentów. Na rys \ref{data visualisation} przedstawiono zależność wszystkich parametrów od czasu dla pacjentów 1, 11, 21, 31 i 41. Na wykresach 1 i 2 przedstawiono motoryczny i całkowity UPDRS. Na wykresie 3 przedstawiono czas, stąd zaobserwowana zależność liniowa dla wszystkich pacjentów. Na wykresach 4 i 5 przedstawiono wiek i płeć pacjentów - stałe wartości w czasie pomiaru. Na pozostałych wykresach przedstawiono kolejne parametry związane z dźwiękiem wymienione powyżej.
 
 \newpage
 \section{Założenia eksperymentu}
 
 \subsection{Podział na zbiór uczący i testowy}
- Przyjęto zbiór testowy jako pierwsze 24 próbki dostępne dla każdego pacjenta. Wszystkie próbki nienależące do zbioru testowego wykorzystano jako zbiór uczący. Liczba wszystkich próbek dostępnych dla i-tego pacjenta nie jest stała, przez co zbiory uczące dla różnych pacjentów zawierały różną liczbę elementów. Minimalna liczba próbek w zbiorze uczącym to 100 próbek dla pojedynczego pacjenta.
+Do zbioru testowego wybrano pierwsze 24 próbki dostępne dla każdego pacjenta. Wszystkie próbki nienależące do zbioru testowego wykorzystano jako zbiór uczący. Liczba wszystkich próbek dostępnych dla i-tego pacjenta nie jest stała, przez co zbiory uczące dla różnych pacjentów zawierały różną liczbę elementów. Minimalna liczba próbek w zbiorze uczącym to 100 próbek dla pojedynczego pacjenta.
  
-Przyjęcie takiej metodyki, było podyktowane przez niską liczbę pacjentów w wykorzystanym zbiorze. Przy 42 pacjentach wydzielanie całych serii pomiarowych wybranych pacjentów poważnie ograniczyłoby zbiór uczący i mogłoby spowodować kłopoty z uogólnieniem wyników przez sieć.
+Przyjęcie takiej metodyki było podyktowane niską liczbą pacjentów w~wykorzystanym zbiorze. Przy 42 pacjentach wydzielenie całych serii pomiarowych wybranych klas zmniejszyłoby zbiór uczący i mogłoby powodować kłopoty z uogólnieniem wyników przez sieć neuronową.
 
 Wszystkie próbki w zbiorze uczącym i testowym zostały posortowane względem czasu w celu ułatwienia analizy uzyskanych wyników.
 
 \subsection{Opis przyjętych metryk}
 
-Do opisu wyników osiąganych dla zbioru uczącego i testowego wykorzystano MSE. W sprawozdaniu wszystkie wartości MSE dla zbioru uczącego zostały obliczone automatycznie przez toolbox matlaba. W analizowanym zbiorze MSE można je zdefniować jako:
+Do opisu wyników osiągniętych dla zbioru uczącego i testowego wykorzystano błąd średniokwadratowy (MSE). W sprawozdaniu wszystkie wartości MSE dla zbioru uczącego zostały obliczone automatycznie przez Deep Learning Toolbox w środowisku Matlab. W analizowanym zbiorze MSE można je zdefniować jako:
 
 \begin{equation}
  	MSE = \frac{1}{n-1} \sum_{i=1}^{n} \sum_{j=1}^{m_i} (y_{i_j} - F(u_{i_j}))^2
 \end{equation}
- 
+
+\begin{flushleft}
  gdzie:\\
  $n$ - liczba pacjentów \\
  $m_i$ - liczba próbek dla i-tego pacjenta \\
  $y_{i_j}$ - oczekiwane wyjście dla i-tego pacjenta i j-tej próbki \\
  $F(u_{i_j})$ - wyjście sieci neuronowej dla i-tego pacjenta i j-tej próbki
+\end{flushleft} 
+
 
 \newpage
 
@@ -558,13 +562,15 @@ Parametry uczenia:
 
 \end{figure}
 
-Przy zwiększeniu liczby pacjentów dla danych nie zawierających duplikatów widać znaczne poprawienie szybkości nauki oraz dopasowania sieci w zbiorze testowym, jednak widoczne jest pogłębienie problemów w nauce zbioru uczącego. Nie wszystkie predykcje wykonywane są w pełni poprawnie, ale jest to rekompensowane szybkim czasem uczenia.
+Przy zwiększeniu liczby pacjentów dla danych nie zawierających duplikatów widać znaczne poprawienie szybkości nauki oraz dopasowania sieci w~zbiorze testowym, jednak widoczne jest pogłębienie problemów w nauce zbioru uczącego. Nie wszystkie predykcje wykonywane są w pełni poprawnie, ale jest to rekompensowane szybkim czasem uczenia.
 
 \newpage
 \section{Wnioski}
 
 \begin{itemize}
-\item Przy użyciu danych z duplikatami sieć radialna nie ma problemów z nauką w przypadku małej ilości klas. Czas nauki jest dłuższy niż w przypadku danych bez duplikatów, dopasowanie sieci jest większe.
+\item Sieci radialne bardzo dobrze radzą sobie z zadaniami predykcji dla jednego pacjenta (klasy)
+\item Po wprowadzenie wielu pacjentów (klas) sieci radialne wykazują niewielkie problemy w nauce, czego przyczyną może być niskiej jakości zbiór uczący
+\item Przy użyciu danych z duplikatami sieć radialna nie ma problemów z~nauką w przypadku małej ilości klas. Czas nauki jest dłuższy niż w przypadku danych bez duplikatów, dopasowanie sieci jest większe.
 \item Zwiększając liczbę klas i wykorzystując dane bez duplikatów czas uczenia osiąga duże wartości. Nie jest możliwa wizualizacja wyników dla maksymalnej liczby pacjentów.
 \item Przy użyciu danych bez duplikatów szybkość uczenia sieci radialnej znacząco maleje, umożliwiając w ten sposób wizualizację wyników dla maksymalnej liczby klas
 \end{itemize}
